# cms

./: .codacy.yaml  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .readthedocs.yml  .travis.sh  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  REQUIREMENTS.txt  REQUIRERMENTS.txt  TODO.txt  _cms-schemadiff-internal.sh  _cms-test-internal.sh  babel_mapping.cfg  cms-dev.sh  cms-stresstest.sh  cms-test.sh  constraints.txt  copy_translations.py  dev-requirements.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  install.py  prerequisites.py  pyproject.toml  pytest.ini  requirements-resolved.txt  requirements.txt  setup.cfg  (+1 more)
.gh_action_data/: run-stresstest.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md  dependabot.yml
box/: .gitignore  README  box.c  compile.sh  compile32.sh  compile64.sh  mk-syscall-table  test-syscalls.c
cms/: MANIFEST.in  README.txt  REQUIREMENTS.txt  TODO  TODO.txt  __init__.py  cms_conf_legacy_mapping.toml.jinja  conf.py  log.py  plugin.py  setup.py  util.py
cmscommon/: Cryptographics.py  DateTime.py  EventSource.py  ISOCodes.py  MimeTypes.py  __init__.py  archive.py  binary.py  commands.py  conf_parser.py  constants.py  crypto.py  datetime.py  digest.py  eventsource.py  importers.py  imports.py  isocodes.py  mimetypes.py  terminal.py  tex.py
cmscompat/: YamlImporter.py  YamlReimporter.py  __init__.py
cmscontrib/: AddAdmin.py  AddContest.py  AddParticipation.py  AddStatement.py  AddSubmission.py  AddTask.py  AddTeam.py  AddTestcases.py  AddTests.py  AddUser.py  AuthServer.py  BaseLoader.py  CleanFiles.py  CloneTask.py  ComputeComplexity.py  ComputeComplexityLengtherExample.py  ContestExporter.py  ContestImporter.py  DumpExporter.py  DumpImporter.py  DumpUpdater.py  ExportSubmissions.py  ImportContest.py  ImportDataset.py  ImportTask.py  ImportTeam.py  ImportUser.py  Importer.py  Loaders.py  PolygonLoader.py  PrometheusExporter.py  RWSHelper.py  Reimporter.py  RemoveContest.py  RemoveParticipation.py  RemoveSubmissions.py  RemoveTask.py  RemoveUser.py  SpoolExporter.py  TelegramBot.py  (+10 more)
cmsranking/: Config.py  Contest.py  Entity.py  Logger.py  RankingWebServer.py  Scoring.py  Store.py  Subchange.py  Submission.py  Task.py  Team.py  User.py  __init__.py
cmstaskenv/: Terminal.py  Test.py  __init__.py  cmsMake.py
cmstestsuite/: AdaptContest.py  ReplayContest.py  ReplayContestFromAdapter.py  RunFunctionalTests.py  RunTests.py  RunTimeTest.py  RunUnitTests.py  StressTest.py  Submit.py  Test.py  TestCleanCheckout.py  TestFileCacher.py  TestService.py  Tests.py  __init__.py  check_schema_diff.py  coverage.py  functionaltestframework.py  profiling.py  programstarter.py  testrunner.py
config/: .gitignore  cms-testdb.conf  cms.conf.sample  cms.ranking.conf.sample  cms.ranking.toml.sample  cms.sample.toml  cms.toml.sample  cms_ranking.sample.toml  isolate.conf.sample  nginx.conf  nginx.conf.sample
debian/: copyright
doc/: .gitignore  32bits_sandbox_howto.txt  Documentation.tex  HTTPS_certificates_howto.txt  analysis_IT.odt  discrepancies_2011.txt  license.txt  localization.txt  openssl.cnf  sandbox.txt  submission_scoring_time_proposal.txt
docker/: _cms-test-internal.sh  cms-dev.sh  cms-stresstest.sh  cms-test.sh  docker-compose.dev.yml  docker-compose.test.yml  supervisord.conf
docs/: API.rst  Configuring a contest.rst  Creating a contest.rst  Data model.rst  Detailed timing configuration.rst  Docker image.rst  External contest formats.rst  Importing formats.rst  Installation.rst  Internals.rst  Introduction.rst  Localization.rst  Makefile  RankingWebServer.rst  Running CMS.rst  Score types.rst  Task types.rst  Task versioning.rst  Troubleshooting.rst  conf.py  gh_links.py  index.rst
examples/: .gitignore  cms.conf.sample  cms.ranking.conf.sample  nginx.conf.sample  supervisord.conf
isolate/: Makefile  autoconf.h  compile.sh  isolate.1.txt  isolate.c
po/: bg.po  bs.po  cms.pot  fr.po  it.po  ko.po  zh.po
scriptCMS/: allCommand.txt  closedSystem.sh  initSystemAll.sh  runCmsSystemAll.sh  runSystem.sh  startCmsWithTilix.sh
scripts/: cmsAdminWebServer  cmsChecker  cmsCodebreakerScoringService  cmsContestWebServer  cmsDropDB  cmsEvaluationService  cmsInitDB  cmsLogService  cmsPrintingService  cmsProxyService  cmsQueueService  cmsWorker  (+3 more)
(+1413 files in other folders)
